pl 80
	- use mgsmerge iso tupdate

pl 79
	- empty sed script fix for aix

pl 78
	- yodl mode, mp fixes

pl 77
	- mfmode

pl 76
	- bfs: shells, scripts

pl 75
	- bfs: release

pl 74
	- avoid buggy /bin/sh on hp-ux
	- bf: make/stepmake.make
	- simple prolog support

pl 73
	- bf: invoke sed only once

pl 72
	- bf: mfplain dependency
	- inimf, inimf checking (sigh)

pl 71
	- bf: c-tags
	- yodl: groff, ditroff

pl 70
	- GUILE config fixes (AF)

pl 69
	- package_depth detection fix

pl 68
	- support for install-libraries

pl 66
	- check for tbl and gmake

pl 65
	- unix style pathsep/dirsep for cygwin

pl 64
	- gcc-2.8/egcs

pl 63
	- CFLAGS from yodl debian patch

pl 62
	- fixed dist from subdirs
	- junked stepmake/aclocal.m4 (again?)
	- resurrected po stuff

pl 61
	- bf: package-diff

pl 60
	- small fixes.

pl 59
	- bf: package-diff (remove missing automatic)
	- install templates, (urg) INSTALL*1,2 INSTALL_OUT*1,2

pl 58
	- distribute formatted txt files: no yodl needed for operation!
	- guile 1.2 and 1.3 support

pl 57
	- yodl first build script fixes
	- uninstall fixes, but, urg, still have to uninstall twice
	  to get rid of all subdirs
	- installed stepmake
	  * install not required
	  * only installs on explicit make install from toplevel stepdir
	  * rather urg, 'make dist' needs absolute distdir!

pl 56
	- crude metapost stuff

pl 55
	- table-to-html stuff moved .

pl 54
	- && for TeX

pl 53
	- moved TeX stuff into tex template

pl 52
	- striproff
	- reeable $(PACKAGE)_LIBES,_INCLUDES
	- metafont rules
	- GTK+, --, -draw config stuff

pl 51
	- bumped version nr

pl 50
	- bf's: PATHSEP
	- png

pl 49
	- use yodl2ms and striproff for txt conversion
	- bf: chmod fail

pl 48
	- bumped version for yodl after various (lily pl7) changes

pl 47
	- bf: patch in website after 'make release'
	- windows ln -> cp
	- bf: texinfo build

pl 46
	- bf: versioning typo: topleveL_MAJOR
	- bf: reincluded optional STATE-VECTOR
pl 45
	- Foo_rules.make -> foo-rules.make

pl 44