@@ -1,7 +1,7 @@
 PACKAGE_NAME=StepMake
 MAJOR_VERSION=0
 MINOR_VERSION=1
-PATCH_LEVEL=80
+PATCH_LEVEL=81
 MY_PATCH_LEVEL=
 
 # use the above to send patches, always empty for released version:
